--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,30 @@
+asttokens==2.2.1
+backcall==0.2.0
 certifi==2023.5.7
 charset-normalizer==3.1.0
+colorama==0.4.6
+decorator==5.1.1
+elevenlabs==0.2.15
+executing==1.2.0
 idna==3.4
+ipython==8.13.2
+jedi==0.18.2
+matplotlib-inline==0.1.6
+parso==0.8.3
+pickleshare==0.7.5
 praw==7.7.0
 prawcore==2.3.0
+prompt-toolkit==3.0.38
+pure-eval==0.2.2
+pydantic==1.10.8
+Pygments==2.15.1
 python-dotenv==1.0.0
 requests==2.31.0
+six==1.16.0
+stack-data==0.6.2
+traitlets==5.9.0
+typing_extensions==4.6.2
 update-checker==0.18.0
 urllib3==2.0.2
+wcwidth==0.2.6
 websocket-client==1.5.2
