Added GPT-4 editing, voice change based on gender

--- a/.env.template
+++ b/.env.template
@@ -3,6 +3,11 @@ CLIENT_ID=
 CLIENT_SECRET=
 USER_AGENT=
 SUBREDDIT=
+MIN_POST_LENGTH=0
+MAX_POST_LENGTH=40000
 
 #ElevenLabs API
 ELEVENLABS_API_KEY=
+
+#OPENAI API
+OPENAI_API_KEY=
