Added .env option to specify background video

--- a/.env.template
+++ b/.env.template
@@ -13,3 +13,7 @@ ELEVENLABS_API_KEY=
 OPENAI_API_KEY=
 #Defaults to GPT-3.5 if FALSE
 USE_GPT_4=FALSE
+
+#FFMPEG
+#Should be something like MCParkour.mp4 and the file MUST be located in the background_videos folder
+BG_VIDEO_FILENAME=
