--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
+aiohttp==3.8.4
+aiosignal==1.3.1
 asttokens==2.2.1
+async-timeout==4.0.2
+attrs==23.1.0
 backcall==0.2.0
 certifi==2023.5.7
 charset-normalizer==3.1.0
@@ -6,10 +10,15 @@ colorama==0.4.6
 decorator==5.1.1
 elevenlabs==0.2.15
 executing==1.2.0
+ffmpeg-python==0.2.0
+frozenlist==1.3.3
+future==0.18.3
 idna==3.4
 ipython==8.13.2
 jedi==0.18.2
 matplotlib-inline==0.1.6
+multidict==6.0.4
+openai==0.27.8
 parso==0.8.3
 pickleshare==0.7.5
 praw==7.7.0
@@ -22,10 +31,11 @@ python-dotenv==1.0.0
 requests==2.31.0
 six==1.16.0
 stack-data==0.6.2
+tqdm==4.65.0
 traitlets==5.9.0
 typing_extensions==4.6.2
 update-checker==0.18.0
 urllib3==2.0.2
 wcwidth==0.2.6
 websocket-client==1.5.2
-ffmpeg-python==0.2.0
+yarl==1.9.2
