Can select random video from directory

--- a/.env.template
+++ b/.env.template
@@ -15,5 +15,7 @@ OPENAI_API_KEY=
 USE_GPT_4=FALSE
 
 #FFMPEG
-#Should be something like MCParkour.mp4 and the file MUST be located in the background_videos folder
+#Either the filename of a file in the background-videos folder or RANDOM to select a random .mp4 file from the folder
 BG_VIDEO_FILENAME=
+#TRUE or FALSE to enable or disable automated subtitles
+SUBTITLES=FALSE
