Can choose to randomize video start time

--- a/.env.template
+++ b/.env.template
@@ -19,3 +19,6 @@ USE_GPT_4=FALSE
 BG_VIDEO_FILENAME=
 #TRUE or FALSE to enable or disable automated subtitles
 SUBTITLES=FALSE
+#TRUE or FALSE to enable or disable randomized start times for the background video
+#This is useful if you have a long video and want to avoid the same part of the video being used every time
+RANDOM_START_TIME=TRUE
