Can set codec and encoding threads

--- a/.env.template
+++ b/.env.template
@@ -22,3 +22,7 @@ SUBTITLES=FALSE
 #TRUE or FALSE to enable or disable randomized start times for the background video
 #This is useful if you have a long video and want to avoid the same part of the video being used every time
 RANDOM_START_TIME=TRUE
+#Set the VCODEC. Defaults is libx264, but can change to use h264_nvenc for some Nvidia GPUs
+VCODEC=libx264
+#Sets the number of threads used for encoding
+THREADS=4
