Subtitles can be added directly to videos

--- a/.env.template
+++ b/.env.template
@@ -26,3 +26,5 @@ RANDOM_START_TIME=TRUE
 VCODEC=libx264
 #Sets the number of threads used for encoding
 THREADS=4
+#If you want subtitles or not
+SUBTITLES=TRUE
