Added gentle url to .env template

--- a/.env.template
+++ b/.env.template
@@ -14,6 +14,10 @@ OPENAI_API_KEY=
 #Defaults to GPT-3.5 if FALSE
 USE_GPT_4=FALSE
 
+#Gentle Forced Aligner
+#Set the URL where the gentle forced aligner is reachable
+GENTLE_URL=
+
 #FFMPEG
 #Either the filename of a file in the background-videos folder or RANDOM to select a random .mp4 file from the folder
 BG_VIDEO_FILENAME=
