--- a/.env.template
+++ b/.env.template
@@ -35,4 +35,5 @@ BG_VIDEO_FILENAME=
 #Target languages: English, German, Polish, Spanish, Italian, French, Portuguese, Hindi
 #If you want to use multiple languages, separate them with a comma: English,German,Polish
 #Limitations: Some numbers and symbols may currently be pronounced incorrectly. For best results, please spell them out. The generated speech can be unstable if the text exceeds 1000 characters.
+#Limitations: Subtitle generation only works for english as the gentle forced aligner only supports english
 LANGUAGES=English
