--- a/.env.template
+++ b/.env.template
@@ -2,6 +2,8 @@
 CLIENT_ID=
 CLIENT_SECRET=
 USER_AGENT=
+#Do not include the r/
+#Example: SUBREDDIT=AskReddit
 SUBREDDIT=
 MIN_POST_LENGTH=0
 MAX_POST_LENGTH=40000
